# HNIVision

./: .env.example  .gitignore  BRAND_GUIDE.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
assets/banner/: hero-banner.html
assets/gallery/: 01_methods.html  01_methods_raw_outputs.json
hnivision/: __init__.py  base.py  overlays.py  pipeline.py
hnivision/hni/: __init__.py  mapper.py  schema.py
hnivision/methods/: __init__.py  classification.py  detection.py  labeling.py  segmentation.py  vlm.py
scripts/: build_banner.py  generate_gallery_html.py  precompute_examples.py  render_gallery_png.py
space/: README.md  app.py
space/examples/: 140546.json  145541.json  148831.json  156108.json  160710.json
